--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
 
                 <!-- Hoja con mensaje -->
                 <div class="letter-content">
-                    <p>Mi amor,</p>
+                    <p>Mi Dar</p>
                     <p>Eres la luz que ilumina mis días y la razón por la que mi corazón late con tanta fuerza. Cada momento a tu lado es un regalo que atesoro profundamente. 💖</p>
+                    <p>Eres todo lo que yo busque y contigo lo tengo todo amor y cada dia que paso a tu lado me enamoro mas y mas de ti.</p>
                     <p>Gracias por ser mi compañera, mi confidente y mi mayor inspiración. Te amo más de lo que las palabras pueden expresar. 🌹</p>
                     <p>Con todo mi amor,</p>
-                    <p>Tu pareja ❤️</p>
+                    <p>Aaron❤️</p>
                 </div>
 
                 <!-- Base de la carta -->
